--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,36 @@
 </head>
 
 <body>
-    <h1 class="text-5xl uppercase text-center mt-5">Welcome To <samp class="font-bold text-blue-500">Baap-Er-Bank</samp>!!!</h1>
+
+    <header>
+
+        <h1 class="text-5xl uppercase text-center mt-5">Welcome To <samp
+                class="font-bold text-blue-500">Baap-Er-Bank</samp>!!!</h1>
+
+    </header>
+
+    <br><br><br>
+
+    <main>
+
+        <div class="grid justify-items-center w-full">
+            <div class="bg-blue-100 grid justify-items-center w-4/5">
+
+                <h1 class="text-3xl">Please Log In</h1>
+                <br>
+                <input class="px-3 h-12 w-96 rounded" type="email"name="" id="" placeholder="Your Email">
+                <br>
+                <input class="px-3 h-12 w-96 rounded" type="password" name="" id="" placeholder="Your Password">
+                <br>
+                <button class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded" type="submit">
+                    Submit
+                </button>
+
+            </div>
+        </div>
+
+    </main>
+
 </body>
 
 </html>
