--- a/Index.html
+++ b/Index.html
@@ -11,21 +11,79 @@
 
 </head>
 
-<body>
+<body class="bg-blue-200">
 
     <header>
 
-        <h1 class="text-5xl uppercase text-center mt-5">Welcome To <samp
-                class="font-bold text-blue-500">Baap-Er-Bank</samp>!!!</h1>
+        <h1 class="text-5xl uppercase text-center mt-5">Let's Get Some <samp
+                class="font-bold text-blue-500">Moeny</samp>!!!</h1>
 
     </header>
 
     <main>
 
+        <section class="grid justify-items-center ">
 
-        
+            <section class="flex justify-center m-10">
+
+                <div class="grid items-center justify-center w-96 h-48 bg-green-300 m-5 rounded ">
+                    <div>
+                        <span class="text-4xl text-white">Deposit</span>
+                        <span class="flex justify-center text-white text-3xl"> <samp
+                                class="text-white text-4xl">0</samp>$</span>
+                    </div>
+                </div>
+                <div class="grid items-center justify-center w-96 h-48 bg-pink-300 m-5 rounded ">
+                    <div>
+                        <span class="text-4xl text-white">withdraw</span>
+                        <br>
+                        <span class="flex justify-center text-white text-3xl"> <samp
+                                class="text-white text-4xl">0</samp>$</span>
+                    </div>
+                </div>
+                <div class="grid items-center justify-center w-96 h-48 bg-red-300 m-5 rounded ">
+                    <div>
+                        <span class="text-4xl text-white">Baleance</span>
+                        <br>
+                        <span class="flex justify-center text-white text-3xl"> <samp
+                                class="text-white text-4xl">0</samp>$</span>
+                    </div>
+                </div>
+
+            </section>
+
+            <section class="flex w-full">
+
+                <div class="grid items-center justify-center w-1/2 h-48 m-5 bg-blue-500">
+                    <div class="grid items-center justify-center h-30">
+                        <span class="text-center text-4xl text-white mb-2">Please Deposit</span>
+                        <span>
+                            <input class="px-3 h-10 w-96 rounded"  type="text">
+                            <br>
+                            <button class="text-center text-2xl text-white  mt-2 bg-blue-900 p-2 rounded hover:bg-blue-700" type="button">Deposit</button>
+                        </span>
+                    </div>
+
+                </div>
+
+                <div class="grid items-center justify-center w-1/2 h-48 m-5 bg-purple-500">
+                    <div class="grid items-center justify-center h-30">
+                        <span class="text-center text-4xl text-white mb-2">Please withdraw</span>
+                        <span>
+                            <input class="px-3 h-10 w-96 rounded" type="text">
+                            <br>
+                            <button class="text-center text-2xl text-white  mt-2 bg-purple-900 p-2 rounded hover:bg-purple-700" type="button">withdraw</button>
+                        </span>
+                    </div>
+
+                </div>
+
+            </section>
+
+        </section>
+
     </main>
-    
+
 
 
 </body>
