--- a/LogIn.HTML
+++ b/LogIn.HTML
@@ -35,7 +35,8 @@
                 <div class="ml-44">
                     <input class="px-3 h-12 w-96 rounded" type="password" name="" id="Password-Field"
                         placeholder="Your Password"> <span
-                        class="bg-blue-500 hover:bg-red-500 text-white font-bold py-2 px-4 rounded mx-3 cursor-pointer " id="Show password"> Show Password
+                        class="bg-blue-500 hover:bg-red-500 text-white font-bold py-2 px-4 rounded mx-3 cursor-pointer "
+                        id="Show password"> Show Password
                     </span>
                 </div>
                 <br>
