--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
                 <div class="grid items-center justify-center w-96 h-48 bg-green-300 m-5 rounded ">
                     <div>
                         <span class="text-4xl text-white">Deposit</span>
-                        <span class="flex justify-center text-white text-3xl"> <samp
+                        <span class="flex justify-center text-white text-3xl"> <samp id="Deposit-Holding-Place"
                                 class="text-white text-4xl">0</samp>$</span>
                     </div>
                 </div>
@@ -58,12 +58,13 @@
                     <div class="grid items-center justify-center h-30">
                         <span class="text-center text-4xl text-white mb-2">Please Deposit</span>
                         <span>
-                            <input class="px-3 h-10 w-96 rounded"  type="text">
+                            <input id="Deposit-Input-Field" class="px-3 h-10 w-96 rounded" type="text">
                             <br>
-                            <button class="text-center text-2xl text-white  mt-2 bg-blue-900 p-2 rounded hover:bg-blue-700" type="button">Deposit</button>
+                            <button id="Deposit-Button"
+                                class="text-center text-2xl text-white  mt-2 bg-blue-900 p-2 rounded hover:bg-blue-700"
+                                type="button">Deposit</button>
                         </span>
                     </div>
-
                 </div>
 
                 <div class="grid items-center justify-center w-1/2 h-48 m-5 bg-purple-500">
@@ -72,7 +73,9 @@
                         <span>
                             <input class="px-3 h-10 w-96 rounded" type="text">
                             <br>
-                            <button class="text-center text-2xl text-white  mt-2 bg-purple-900 p-2 rounded hover:bg-purple-700" type="button">withdraw</button>
+                            <button
+                                class="text-center text-2xl text-white  mt-2 bg-purple-900 p-2 rounded hover:bg-purple-700"
+                                type="button">withdraw</button>
                         </span>
                     </div>
 
@@ -84,7 +87,7 @@
 
     </main>
 
-
+    <script src="JS/Index.Js"></script>
 
 </body>
 
