--- a/Index.html
+++ b/Index.html
@@ -35,17 +35,17 @@
                 </div>
                 <div class="grid items-center justify-center w-96 h-48 bg-pink-300 m-5 rounded ">
                     <div>
-                        <span class="text-4xl text-white">withdraw</span>
+                        <span class="text-4xl text-white">Withdraw</span>
                         <br>
-                        <span class="flex justify-center text-white text-3xl"> <samp
+                        <span class="flex justify-center text-white text-3xl"> <samp id="Withdraw-Holding-Place"
                                 class="text-white text-4xl">0</samp>$</span>
                     </div>
                 </div>
                 <div class="grid items-center justify-center w-96 h-48 bg-red-300 m-5 rounded ">
                     <div>
-                        <span class="text-4xl text-white">Baleance</span>
+                        <span class="text-4xl text-white">Balance</span>
                         <br>
-                        <span class="flex justify-center text-white text-3xl"> <samp
+                        <span class="flex justify-center text-white text-3xl"> <samp id="Balance-Holding-Place"
                                 class="text-white text-4xl">0</samp>$</span>
                     </div>
                 </div>
@@ -69,13 +69,13 @@
 
                 <div class="grid items-center justify-center w-1/2 h-48 m-5 bg-purple-500">
                     <div class="grid items-center justify-center h-30">
-                        <span class="text-center text-4xl text-white mb-2">Please withdraw</span>
+                        <span class="text-center text-4xl text-white mb-2">Please Withdraw</span>
                         <span>
-                            <input class="px-3 h-10 w-96 rounded" type="text">
+                            <input id="Withdraw-Input-Field" class="px-3 h-10 w-96 rounded" type="text">
                             <br>
                             <button
                                 class="text-center text-2xl text-white  mt-2 bg-purple-900 p-2 rounded hover:bg-purple-700"
-                                type="button">withdraw</button>
+                                type="button">Withdraw</button>
                         </span>
                     </div>
 
