--- a/Index.html
+++ b/Index.html
@@ -73,7 +73,7 @@
                         <span>
                             <input id="Withdraw-Input-Field" class="px-3 h-10 w-96 rounded" type="text">
                             <br>
-                            <button
+                            <button id="Withdraw-Button"
                                 class="text-center text-2xl text-white  mt-2 bg-purple-900 p-2 rounded hover:bg-purple-700"
                                 type="button">Withdraw</button>
                         </span>
